Implement ExampleGame integration test